--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
+    "mv": "^2.1.1",
     "tslib": "^1"
   },
   "devDependencies": {
@@ -18,6 +19,7 @@
     "@oclif/test": "^1",
     "@types/chai": "^4",
     "@types/mocha": "^5",
+    "@types/mv": "^2.1.0",
     "@types/node": "^10",
     "chai": "^4",
     "eslint": "^5.13",
